  option \\close_buffer_with_last_view)


The following LyX functions have been changed:
 
- LFUN_CLOSE_TAB_GROUP ("close-tab-group") was renamed to
  LFUN_TAB_GROUP_CLOSE ("tab-group-close").

- LFUN_SPIT_VIEW ("split-view") was renamed to
  LFUN_VIEW_SPLIT ("view-split").

- LFUN_BREAK_PARAGRAPH ("break-paragraph") was renamed to
  LFUN_PARAGRAPH_BREAK ("paragraph-break").


The following LyX key bindings have been changed:

- The binding "C-w" was moved from "buffer-close" to "view-close"
  (only in cua.bind).

- sciword.bind was changed significantly (see #8364). The most important
  change is that "math-delim" commands now work under Windows.

The following LyX documents have been moved:

- 'AEA', 'JASA', 'springer', 'ACM-siggraph', and 'thesis' have been moved
  from templates to examples (see #8643).


The following metadata files have been added to the tarball:

- Linux desktop file specification and scalable icon has been
  included in the tarball.

- AppData file (appdata.xml). It will not be installed by default and
  distribution maintainers need to handle this file themselves.


Changes with respect to external programs and libraries:
--------------------------------------------------------

- LyX now links against libmagic (http://www.darwinsys.com/file/) if it is
  available at compile time. This improves the file format detection of
  included graphics and other files. The old builtin format detection code
  is used if libmagic is not available.

- LyX no longer uses gettext for reading the translation files. This
  especially has an advantage on Windows, reducing the time it takes to 
  find the correct translation.


Known issues in version 2.1.0
-----------------------------

- LyX needs to be run under Python 2 and will not work properly on systems
  where Python 3 is the default binary. See bug #7030 to know how to fix
  this properly, since simple sheebang conversion in *.py files will not
  be enough.

