@@ -168,7 +168,7 @@ enum FuncCode
 	LFUN_WORD_DELETE_FORWARD,
 	LFUN_WORD_DELETE_BACKWARD,
 	// 115
-	LFUN_LINE_DELETE,
+	LFUN_LINE_DELETE_FORWARD,
 	LFUN_DEBUG_LEVEL_SET,
 	LFUN_MARK_OFF,
 	LFUN_MARK_ON,
@@ -230,7 +230,7 @@ enum FuncCode
 	// 165
 	LFUN_VC_REPO_UPDATE,
 	LFUN_VC_COMPARE,
-	LFUN_HYPERLINK_INSERT,          // CFO-G 971121
+	LFUN_HREF_INSERT,          // CFO-G 971121
 	LFUN_WORD_FIND_FORWARD,         // Etienne 980216
 	LFUN_WORD_FIND_BACKWARD,        // Etienne 980220
 	// 170
@@ -402,7 +402,7 @@ enum FuncCode
 	LFUN_COMPLETION_POPUP,
 	LFUN_COMPLETION_INLINE,
 	// 310
-	LFUN_COMPLETION_COMPLETE,
+	LFUN_COMPLETE,
 	LFUN_SET_GRAPHICS_GROUP,
 	LFUN_COMPLETION_CANCEL,
 	LFUN_COMPLETION_ACCEPT,
@@ -414,8 +414,8 @@ enum FuncCode
 	LFUN_REGEXP_MODE,               // Tommaso, 20081003
 	LFUN_LABEL_GOTO,                // Ale 970806
 	// 320
-	LFUN_LABEL_COPY_AS_REF,         // sts, 20081116
-	LFUN_LABEL_INSERT_AS_REF,       // vfr, 20090407
+	LFUN_LABEL_COPY_AS_REFERENCE,         // sts, 20081116
+	LFUN_LABEL_INSERT_AS_REFERENCE,       // vfr, 20090407
 	LFUN_PHANTOM_INSERT,            // uwestoehr, 20090130
 	LFUN_INSET_BEGIN,               // JMarc, 20090316
 	LFUN_INSET_END,                 // JMarc, 20090316
@@ -430,9 +430,9 @@ enum FuncCode
 	LFUN_SECTION_SELECT,            // vfr, 20090503
 	LFUN_FONT_UNDERLINE,
 	LFUN_FONT_STRIKEOUT,
-	LFUN_FONT_UULINE,
+	LFUN_FONT_UNDERUNDERLINE,
 	// 335
-	LFUN_FONT_UWAVE,
+	LFUN_FONT_UNDERWAVE,
 	LFUN_BUFFER_EXPORT,             // Lgb 97-07-29
 	LFUN_BUFFER_TOGGLE_COMPRESSION, // bpeng 20060427
 	LFUN_BRANCH_ADD,                // spitz 20090707
