@@ -200,8 +200,8 @@ bool InsetLabel::getStatus(Cursor & cur, FuncRequest const & cmd,
 {
 	bool enabled;
 	switch (cmd.action()) {
-	case LFUN_LABEL_INSERT_AS_REF:
-	case LFUN_LABEL_COPY_AS_REF:
+	case LFUN_LABEL_INSERT_AS_REFERENCE:
+	case LFUN_LABEL_COPY_AS_REFERENCE:
 		enabled = true;
 		break;
 	default:
@@ -233,7 +233,7 @@ void InsetLabel::doDispatch(Cursor & cur, FuncRequest & cmd)
 		break;
 	}
 
-	case LFUN_LABEL_COPY_AS_REF: {
+	case LFUN_LABEL_COPY_AS_REFERENCE: {
 		InsetCommandParams p(REF_CODE, "ref");
 		p["reference"] = getParam("name");
 		cap::clearSelection();
@@ -241,7 +241,7 @@ void InsetLabel::doDispatch(Cursor & cur, FuncRequest & cmd)
 		break;
 	}
 
-	case LFUN_LABEL_INSERT_AS_REF: {
+	case LFUN_LABEL_INSERT_AS_REFERENCE: {
 		InsetCommandParams p(REF_CODE, "ref");
 		p["reference"] = getParam("name");
 		string const data = InsetCommand::params2string(p);
