@@ -4384,8 +4384,8 @@ void InsetTabular::doDispatch(Cursor & cur, FuncRequest & cmd)
 	case LFUN_FONT_SIZE:
 	case LFUN_FONT_UNDERLINE:
 	case LFUN_FONT_STRIKEOUT:
-	case LFUN_FONT_UULINE:
-	case LFUN_FONT_UWAVE:
+	case LFUN_FONT_UNDERUNDERLINE:
+	case LFUN_FONT_UNDERWAVE:
 	case LFUN_LANGUAGE:
 	case LFUN_PARAGRAPH_PARAMS_APPLY:
 	case LFUN_PARAGRAPH_PARAMS:
