@@ -170,6 +170,9 @@ The following LyX functions have been changed:
 - LFUN_BREAK_PARAGRAPH ("break-paragraph") was renamed to
   LFUN_PARAGRAPH_BREAK ("paragraph-break").
 
+- LFUN_COPY_LABEL_AS_REF ("copy-label-as-reference") has been renamed to
+  LFUN_LABEL_COPY_AS_REF ("label-copy-as-reference").
+
 
 The following LyX key bindings have been changed:
 
